# matslise

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.txt  docker.sh  docker_build.sh  gui2matslise.wasm  macos.sh  main.cpp  wheels.ps1
cmake/: FindMKL.cmake  FindQuadmath.cmake
gui/: .eslintrc.json  package-lock.json  package.json
gui2/: index.html  package-lock.json  package.json  ti1d.html  ti2d.html  tsconfig.json
main/: CMakeLists.txt  main.cpp
matslise/: .gitignore  Array2D.h  CMakeLists.txt  calculateEta.h  formula_constants.h  legendre.cpp  legendre.h  liouville.h  matscs.cpp  matscs.h  matslise.cpp  matslise.h  matslise2d.h  matslise3d.h  matsliseNd.h
matslise/js/: matslise.cpp  matslise.d.ts  module.cpp  module.h  sturm_liouville.cpp
matslise/liouville/: instantiate.h  liouville.cpp  sturm_liouville.cpp
matslise/matscs/: instantiate.h  matscs.cpp  matscs_formulas.cpp  matscs_formulas.h  matscs_formulas.ipynb  sector.cpp
matslise/matslise/: abstract_matslise.cpp  halfrange.cpp  instantiate.h  matslise.cpp  matslise_formulas.cpp  matslise_formulas.h  matslise_formulas.ipynb  periodic.cpp  sector.cpp
matslise/matslise2d/: basisQuadrature.cpp  basisQuadrature.h  eigenfunctions.cpp  etaIntegrals.h  halfrange.cpp  instantiate.h  matslise2d.cpp  sector.cpp
matslise/matslise3d/: instantiate.h  matslise3d.cpp  sector.cpp
matslise/matsliseNd/: instantiate.h  matsliseNd.cpp  matsliseNd.impl.h  sector.cpp
matslise/pyslise/: description.md  module.cpp  module.h  pyscs.cpp  pyslise.cpp  pyslise2d.cpp  pyslise3d.cpp  setup.py  sturm_liouville.cpp
matslise/util/: calculateEta.cpp  calculateEta.h  constants.h  eigen.h  heap.h  horner.h  instantiate.h  legendre.h  legendre.ipynb  legendre_data.h  polynomial.h  quadrature.cpp  rectangle.h  scoped_timer.h  sectorbuilder.cpp  sectorbuilder.h  sectorbuilder.impl.h  y.h
notebooks/: Untitled.ipynb  docs.ipynb  legendreQuadrature.ipynb  se2d_prufer.ipynb  test_M.ipynb  test_auto.ipynb  test_halfrange.ipynb  test_pyscs.ipynb  test_pyscs_4.ipynb  test_pyscs_hard.ipynb  test_pyscs_x2.ipynb  test_pyslise.ipynb  test_se2d.ipynb  test_se2d_henon.ipynb  test_se2d_quartic.ipynb
pyslise/: .gitignore  setup.py
python/: CMakeLists.txt  pyslise.cpp  setup.py
src/: Array2D.h  CMakeLists.txt  Evaluator.h  Matrix2D.h  formula_constants.h  lobatto.h  main.cpp  matscs.h  matslise.h  matslise2d.h  matslise3d.h  matsliseNd.h  schrodinger.h  se2d.h
src/cmake/: FindMKL.cmake
src/js/: main.cpp  matslise.cpp  matslise.d.ts  matslise2d.cpp  module.h
src/matscs/: eigenfunction_calculator.cpp  matscs.cpp  matscs_formulas.cpp  matscs_formulas.h  matscs_formulas.ipynb  sector.cpp
src/matslise/: abstract_matslise.cpp  eigenfunction_calculator.cpp  halfrange.cpp  matslise.cpp  matslise_formulas.cpp  matslise_formulas.h  matslise_formulas.ipynb  sector.cpp
src/matslise2d/: basisQuadrature.cpp  basisQuadrature.h  eigenfunctions.cpp  eigenvalues.cpp  etaIntegrals.h  halfrange.cpp  matching.h  matslise2d.cpp  se_eigenfunctions.cpp  se_eigenvalues.cpp  sector.cpp  sector_correction_potential.h
src/matslise3d/: matslise3d.cpp  sector.cpp
src/matsliseNd/: matsliseNd.cpp  sector.cpp
src/pyslise/: description.md  module.cpp  module.h  pyscs.cpp  pyse2d.cpp  pyslise.cpp  pyslise2d.cpp  pyslise3d.cpp  setup.py
src/python/: CMakeLists.txt  pyslise.cpp  setup.py
src/se2d/: halfrange.cpp  se2d.cpp  se_eigenfunctions.cpp  se_eigenvalues.cpp  sector.cpp
src/util/: SectorBuilder.cpp  SectorBuilder.h  SectorBuilder_header.h  addTheta.h  calculateEta.cpp  calculateEta.h  constants.h  eigen.h  find_sector.h  fmath.cpp  fmath.h  horner.h  instantiate.h  legendre.cpp  legendre.h  legendre.ipynb  legendre_data.h  lobatto.cpp  lobatto.h  matching.h  quadrature.cpp  quadrature.h  rectangle.h  sectorbuilder.cpp  sectorbuilder.h  sectorbuilder_header.h  theta.h  value_ptr.h  y.cpp  y.h
swig/python_wrapper/: CMakeLists.txt  pyslise.i  pyslise_swig.i  setup.py.in  test.py
test/: CMakeLists.txt  benchmark.py  test.h
test/js/: approx.js  ixaru.test.js  matslise.test.js  sturm_liouville.test.js
test/liouville/: klotter.cpp  liouville.cpp
test/matscs/: propagatePsi.cpp  propagateTheta.cpp
test/matslise/: coffey_evans.cpp  harmonic.cpp  hr_mathieu.cpp  ixaru.cpp  marletta.cpp  mathieu.cpp  periodic.cpp  prufer.cpp  simple.cpp  sturm_liouville.cpp  test_problem.h
test/matslise2d/: checkOrthonormality.h  coulomb.cpp  derivatives.cpp  henon.cpp  ixaru.cpp  pentagon.cpp  quadrature.cpp  quartic.cpp  twoSextic.cpp  zero.cpp
test/matslise3d/: coulomb.cpp  harmonic_oscillator.cpp
test/pyslise/: test_docs.py
test/se2d/: checkOrthonormality.h  coulomb.cpp  derivatives.cpp  henon.cpp  ixaru.cpp  pentagon.cpp  quartic.cpp  two_sector.cpp  zero.cpp
test/util/: calculateEta.cpp  calculateEta.ipynb  fEquals.h  heap.cpp  legendre.cpp  lobatto.cpp  polynomial.cpp  quadrature.cpp  rectangle.cpp
wheelhouse/: pyslise-0.0.1-cp27-cp27m-manylinux2010_x86_64.whl  pyslise-0.0.1-cp27-cp27m-win_amd64.whl  pyslise-0.0.1-cp27-cp27mu-manylinux2010_x86_64.whl  pyslise-0.0.1-cp34-cp34m-manylinux2010_x86_64.whl  pyslise-0.0.1-cp35-cp35m-manylinux2010_x86_64.whl  pyslise-0.0.1-cp36-cp36m-linux_x86_64.whl  pyslise-0.0.1-cp36-cp36m-manylinux2010_x86_64.whl  pyslise-0.0.1-cp36-cp36m-win_amd64.whl  pyslise-0.0.1-cp37-cp37m-manylinux2010_x86_64.whl  pyslise-0.0.1-cp37-cp37m-win_amd64.whl  pyslise-0.0.2-cp27-cp27m-win_amd64.whl  pyslise-0.0.2-cp27-cp27mu-manylinux2010_x86_64.whl  pyslise-0.0.2-cp34-cp34m-manylinux2010_x86_64.whl  pyslise-0.0.2-cp35-cp35m-manylinux2010_x86_64.whl  pyslise-0.0.2-cp36-cp36m-manylinux2010_x86_64.whl  pyslise-0.0.2-cp36-cp36m-win_amd64.whl  pyslise-0.0.2-cp37-cp37m-manylinux2010_x86_64.whl  pyslise-0.0.2-cp37-cp37m-win_amd64.whl  pyslise-0.0.3-cp27-cp27m-win_amd64.whl  pyslise-0.0.3-cp27-cp27mu-manylinux2010_x86_64.whl  pyslise-0.0.3-cp34-cp34m-manylinux2010_x86_64.whl  pyslise-0.0.3-cp35-cp35m-manylinux2010_x86_64.whl  pyslise-0.0.3-cp35-cp35m-win_amd64.whl  pyslise-0.0.3-cp36-cp36m-manylinux2010_x86_64.whl  (+14 more)
(+108 files in other folders)
